--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <main class="dashboard">
         <div class="message" id="message">Player X's move</div>
         <div class="grid" id="grid">
-            <div class="cell" data-cell="0"></div>
-            <div class="cell" data-cell="1"></div>
-            <div class="cell" data-cell="2"></div>
-            <div class="cell" data-cell="3"></div>
-            <div class="cell" data-cell="4"></div>
-            <div class="cell" data-cell="5"></div>
-            <div class="cell" data-cell="6"></div>
-            <div class="cell" data-cell="7"></div>
-            <div class="cell" data-cell="8"></div>
+            <div class="cell cell-0" data-cell="0"></div>
+            <div class="cell cell-1" data-cell="1"></div>
+            <div class="cell cell-2" data-cell="2"></div>
+            <div class="cell cell-3" data-cell="3"></div>
+            <div class="cell cell-4" data-cell="4"></div>
+            <div class="cell cell-5" data-cell="5"></div>
+            <div class="cell cell-6" data-cell="6"></div>
+            <div class="cell cell-7" data-cell="7"></div>
+            <div class="cell cell-8" data-cell="8"></div>
         </div>
         <div class="reset">
             <button class="btn btn-reset" type="reset">Play Again</button>
